# key-value-storage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mock_client/: Dockerfile  client.py
source/: handlers.py  main.py  models.py  scheduler.py  settings.py  setup_db.py  unit_tests.py
