[project]
name = "key-value-storage"
version = "0.1.0"
description = "Made by Ves, the Coder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
